--- a/A001.html
+++ b/A001.html
@@ -14,12 +14,12 @@
 </head>
 
 <header class="header">
-    <a href="მთავარი.html" class="logo">
+    <a href="index.html" class="logo">
         <img src="images/Logo.png" alt="">
     </a>
 
     <nav class="navbar">
-        <a href="მთავარი.html">მთავარი</a>
+        <a href="index.html">მთავარი</a>
         <a href="#">ჩვენ შესახებ</a>
         <a href="პროდუქცია.html">პროდუქცია</a>
         <a href="საკონტაქტო.html">საკონტაქტო</a>
@@ -145,7 +145,7 @@
     </div>
 
     <div class="links">
-        <a href="მთავარი.html">მთავარი</a>
+        <a href="index.html">მთავარი</a>
         <a href="#">ჩვენ შესახებ</a>
         <a href="პროდუქცია.html">პროდუქცია</a>
         <a href="საკონტაქტო.html">საკონტაქტო</a>
