--- a/პროდუქცია.html
+++ b/პროდუქცია.html
@@ -76,7 +76,7 @@
             <img src="images/Square Knot.png" alt="">
             <h3>A001</h3>
             <div class="price">5 ლარი</div>
-            <a href="a001.html" class="btn">შეუკვეთე</a>
+            <a href="A001.html" class="btn">შეუკვეთე</a>
         </div>
 
         <div class="box">
