--- a/პროდუქცია.html
+++ b/პროდუქცია.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HandKrafter Bands</title>
+    <title> პროდუქცია </title>
 
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css">
@@ -19,6 +19,7 @@
     <nav class="navbar">
         <a href="index.html">მთავარი</a>
         <a href="#">ჩვენ შესახებ</a>
+        <a href="ფერების-კატალოგი.html">ფერების კატალოგი</a>
         <a href="პროდუქცია.html">პროდუქცია</a>
         <a href="საკონტაქტო.html">საკონტაქტო</a>
     </nav>
@@ -73,52 +74,52 @@
     <div class="box-container">
 
         <div class="box">
-            <img src="images/Square Knot.png" alt="">
+            <img src="images/A001.png" alt="">
             <h3>A001</h3>
             <div class="price">5 ლარი</div>
             <a href="A001.html" class="btn">შეუკვეთე</a>
         </div>
 
         <div class="box">
-            <img src="images/3Color Square Knot.png" alt="">
-            <h3></h3>
-            <div class="price">6 ლარი</div>
-            <a href="#" class="btn">შეუკვეთე</a>
-        </div>
-
-        <div class="box">
-            <img src="images/Head Knot.png" alt="">
-            <h3></h3>
-            <div class="price">5 ლარი</span></div>
-            <a href="#" class="btn">შეუკვეთე</a>
-        </div>
-
-        <div class="box">
-            <img src="images/2Color Macmane Bracelet.png" alt="">
-            <h3></h3>
+            <img src="images/A002.png" alt="">
+            <h3>A002</h3>
             <div class="price">5 ლარი</div>
-            <a href="#" class="btn">შეუკვეთე</a>
+            <a href="A002.html  " class="btn">შეუკვეთე</a>
         </div>
 
         <div class="box">
-            <img src="images/Macmane Bracelet A025.png" alt="">
-            <h3></h3>
-            <div class="price">7 ლარი</span></div>
-            <a href="#" class="btn">შეუკვეთე</a>
+            <img src="images/A003.png" alt="">
+            <h3>A003</h3>
+            <div class="price">5 ლარი</span></div>
+            <a href="A003.html" class="btn">შეუკვეთე</a>
         </div>
 
         <div class="box">
-            <img src="images/Square Knot Variation.png" alt="">
-            <h3></h3>
-            <div class="price">6 ლარი</span></div>
-            <a href="#" class="btn">შეუკვეთე</a>
-        </div>
-
-        <div class="box">
-            <img src="images/Square Knot Variation A001.png" alt="">
+            <img src="images/A004.png" alt="">
             <h3>A004</h3>
             <div class="price">5 ლარი</div>
-            <a href="#" class="btn">შეუკვეთე</a>
+            <a href="A004.html" class="btn">შეუკვეთე</a>
+        </div>
+
+        <div class="box">
+            <img src="images/A005.png" alt="">
+            <h3>A005</h3>
+            <div class="price">5 ლარი</div>
+            <a href="A005.html" class="btn">შეუკვეთე</a>
+        </div>
+
+        <div class="box">
+            <img src="images/B001.png" alt="">
+            <h3>B001</h3>
+            <div class="price">6 ლარი</span></div>
+            <a href="B001.html" class="btn">შეუკვეთე</a>
+        </div>
+
+        <div class="box">
+            <img src="images/B002.png" alt="">
+            <h3>B002</h3>
+            <div class="price">6 ლარი</span></div>
+            <a href="B002.html" class="btn">შეუკვეთე</a>
         </div>
 
         <div class="box">
@@ -150,6 +151,7 @@
     <div class="links">
         <a href="index.html">მთავარი</a>
         <a href="#">ჩვენ შესახებ</a>
+        <a href="ფერების-კატალოგი.html">ფერების კატალოგი</a>
         <a href="პროდუქცია.html">პროდუქცია</a>
         <a href="საკონტაქტო.html">საკონტაქტო</a>
     </div>
