--- a/საკონტაქტო.html
+++ b/საკონტაქტო.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HandKrafter Bands</title>
+    <title>საკონტაქტო</title>
 
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css">
@@ -19,6 +19,7 @@
     <nav class="navbar">
         <a href="index.html">მთავარი</a>
         <a href="#">ჩვენ შესახებ</a>
+        <a href="ფერების-კატალოგი.html">ფერების კატალოგი</a>
         <a href="პროდუქცია.html">პროდუქცია</a>
         <a href="საკონტაქტო.html">საკონტაქტო</a>
     </nav>
@@ -149,6 +150,7 @@
     <div class="links">
         <a href="index.html">მთავარი</a>
         <a href="#">ჩვენ შესახებ</a>
+        <a href="ფერების-კატალოგი.html">ფერების კატალოგი</a>
         <a href="პროდუქცია.html">პროდუქცია</a>
         <a href="საკონტაქტო.html">საკონტაქტო</a>
     </div>
