--- a/A001.html
+++ b/A001.html
@@ -9,8 +9,6 @@
     <link rel="stylesheet" href="css/prodtest.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css">
 
-
-    <title>Document</title>
 </head>
 
 <header class="header">
@@ -21,6 +19,7 @@
     <nav class="navbar">
         <a href="index.html">მთავარი</a>
         <a href="#">ჩვენ შესახებ</a>
+        <a href="ფერების-კატალოგი.html">ფერების კატალოგი</a>
         <a href="პროდუქცია.html">პროდუქცია</a>
         <a href="საკონტაქტო.html">საკონტაქტო</a>
     </nav>
@@ -79,7 +78,7 @@
     <div class="containerpg">
         <div class="productpage">
             <div class="gallery">
-                <img src="images/Square Knot.png" id="productImg">
+                <img src="images/A001.png" id="productImg">
                 <div class="controls">
                     <span class="btnpro active"></span>
                     <span class="btnpro"></span>
@@ -89,7 +88,7 @@
             <div class="details">
                 <h1> </h1>
                 <h2> 5 ლარი </h2>
-                <p> Chemi nawvalevia boishvili viyve</p>
+                <p></p>
 
                 <form>
                     <div class="color-select">
@@ -119,7 +118,8 @@
                             <span class="color-6"></span>
                         </label>
                     </div>
-                    <button>დროებით ეს ფუნქცია არ მუშაობს</button>
+                    <button>დროებით ეს ფუნქცია არ მუშაობს.
+                        შესაკვეთად გადადით საკონტაქტო გვერდზე</button>
                 </form>
             </div>
         </div>
@@ -129,7 +129,7 @@
         let btn = document.getElementsByClassName("btnpro")
     
         btn[0].onclick = function(){
-            productImg.src = "images/Square Knot.png";
+            productImg.src = "images/A001.png";
         }
         btn[1].onclick = function(){
             productImg.src = "#";
@@ -147,6 +147,7 @@
     <div class="links">
         <a href="index.html">მთავარი</a>
         <a href="#">ჩვენ შესახებ</a>
+        <a href="ფერების-კატალოგი.html">ფერების კატალოგი</a>
         <a href="პროდუქცია.html">პროდუქცია</a>
         <a href="საკონტაქტო.html">საკონტაქტო</a>
     </div>
