--- a/B001.html
+++ b/B001.html
@@ -8,6 +8,7 @@
 
     <link rel="stylesheet" href="css/prodtest.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css">
+    <link rel="icon" type="image/png" href="images/Logo.png">
 
 </head>
 
@@ -18,7 +19,7 @@
 
     <nav class="navbar">
         <a href="index.html">მთავარი</a>
-        <a href="#">ჩვენ შესახებ</a>
+        <a href="ჩვენ-შესახებ.html">ჩვენ შესახებ</a>
         <a href="ფერების-კატალოგი.html">ფერების კატალოგი</a>
         <a href="პროდუქცია.html">პროდუქცია</a>
         <a href="საკონტაქტო.html">საკონტაქტო</a>
@@ -78,7 +79,7 @@
     <div class="containerpg">
         <div class="productpage">
             <div class="gallery">
-                <img src="images/Square Knot.png" id="productImg">
+                <img src="images/B001.png" id="productImg">
                 <div class="controls">
                     <span class="btnpro active"></span>
                     <span class="btnpro"></span>
@@ -88,7 +89,7 @@
             <div class="details">
                 <h1> </h1>
                 <h2> 5 ლარი </h2>
-                <p> Chemi nawvalevia boishvili viyve</p>
+                <p></p>
 
                 <form>
                     <div class="color-select">
@@ -129,7 +130,7 @@
         let btn = document.getElementsByClassName("btnpro")
     
         btn[0].onclick = function(){
-            productImg.src = "images/Square Knot.png";
+            productImg.src = "images/B001.png";
         }
         btn[1].onclick = function(){
             productImg.src = "#";
@@ -140,13 +141,13 @@
     </script>
 <section class="footer">
     <div class="share">
-        <a href="#" class="fab fa-facebook-f"></a>
-        <a href="#" class="fab fa-instagram"></a>
+        <a href="https://www.facebook.com/profile.php?id=61573732992820" class="fab fa-facebook-f"></a>
+        <a href="https://www.instagram.com/handykrafterbands/" class="fab fa-instagram"></a>
     </div>
 
     <div class="links">
         <a href="index.html">მთავარი</a>
-        <a href="#">ჩვენ შესახებ</a>
+        <a href="ჩვენ-შესახებ.html">ჩვენ შესახებ</a>
         <a href="ფერების-კატალოგი.html">ფერების კატალოგი</a>
         <a href="პროდუქცია.html">პროდუქცია</a>
         <a href="საკონტაქტო.html">საკონტაქტო</a>
