--- a/საკონტაქტო.html
+++ b/საკონტაქტო.html
@@ -7,6 +7,7 @@
 
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css">
+    <link rel="icon" type="image/png" href="images/Logo.png">
 
 </head>
 <body>
@@ -18,7 +19,7 @@
 
     <nav class="navbar">
         <a href="index.html">მთავარი</a>
-        <a href="#">ჩვენ შესახებ</a>
+        <a href="ჩვენ-შესახებ.html">ჩვენ შესახებ</a>
         <a href="ფერების-კატალოგი.html">ფერების კატალოგი</a>
         <a href="პროდუქცია.html">პროდუქცია</a>
         <a href="საკონტაქტო.html">საკონტაქტო</a>
@@ -143,13 +144,13 @@
 
 <section class="footer">
     <div class="share">
-        <a href="#" class="fab fa-facebook-f"></a>
-        <a href="#" class="fab fa-instagram"></a>
+        <a href="https://www.facebook.com/profile.php?id=61573732992820" class="fab fa-facebook-f"></a>
+        <a href="https://www.instagram.com/handykrafterbands/" class="fab fa-instagram"></a>
     </div>
 
     <div class="links">
         <a href="index.html">მთავარი</a>
-        <a href="#">ჩვენ შესახებ</a>
+        <a href="ჩვენ-შესახებ.html">ჩვენ შესახებ</a>
         <a href="ფერების-კატალოგი.html">ფერების კატალოგი</a>
         <a href="პროდუქცია.html">პროდუქცია</a>
         <a href="საკონტაქტო.html">საკონტაქტო</a>
