--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             <p>ეს ყველაფერი მარტივი იდეით და შემოქმედებითობის გატაცებით დაიწყო. 
                 რაც დაიწყო როგორც პატარა ჰობი, სამაჯურების დამზადება მეგობრებისა და ოჯახისთვის.</p>
             <p></p>
-            <a href="#" class="btn">შეიტყვე მეტი</a>
+            <a href="ჩვენ-შესახებ.html" class="btn">შეიტყვე მეტი</a>
         </div>
     
     </div>
