--- a/პროდუქცია.html
+++ b/პროდუქცია.html
@@ -126,15 +126,8 @@
         <div class="box">
             <img src="" alt="">
             <h3></h3>
-            <div class="price">5 ლარი</div>
-            <a href="#" class="btn">შეუკვეთე</a>
-        </div>
-        
-        <div class="box">
-            <img src="" alt="">
-            <h3></h3>
             <div class="price"></div>
-            <a href="#" class="btn">შეუკვეთე</a>
+            <a href="#" class="btn">სხვა ესკიზები მალე დაემატება</a>
         </div>
 
     </div>    
